2006-04-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtk.c: Added reference to Gtk::Window until the widget is
	destroyed. This change is for backward compatibility and usability.

2006-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmenushell.c: Added G_CHILD_ADD.
	* src/rbgtknotebook.c: ditto.
	* src/rbgtktable.c: ditto.

2006-04-08  Mario Steele 

	* sample/gtk-demo/images.rb: Read the image with "rb" mode not "r".

2006-03-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkaccelgroup.c: Follow new GRClosure API. Call
	g_rclosure_attach.

2006-02-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwidget.c (widget_render_icon): the third argument
	'detail' is optional and accepts nil.

2006-01-31  Tilman Sauerbeck <tilman@code-monkey.de>

	* src/rbgtkwidget.c: Fixed a wrong parameter of Gtk::Widget#set_colormap. 

2006-01-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Added Gtk::Widget#set_widget by  Daniel Chokola.
	Added Gtk::Widget#set_requisition.

2006-01-27  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgdkproperty.c: Fix to be able to use _NET_WM_PID property.
	* sample/misc/ipc.rb: Added.
	
2006-01-27  Tilman Sauerbeck <tilman@code-monkey.de>

	* src/rbgdkpixbuf.c: Fixed wrong argument of 
	Gdk::Pixbuf#render_pixmap_and_mask.

2006-01-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtk.c: Restore default poll function when ruby exits.

2006-01-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtk.c: Fixed a bug that Gtk.events_ending? always returns
	true.
	* src/rbgtkmain.c: ditto.

2005-12-01  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gtk-demo/hypertext.rb: Fixed a return key handling bug.

2005-11-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkitemfactory.c: Fixed a bug of Gtk::ItemFactory.popup.
	Reported by Grant McLean.

2005-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/tree_combo.rb: Added.

2005-11-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpango.c: Fix a typo of Pango::Context#colormap=. 
