@@ -2,15 +2,17 @@
 =begin
   fileselection.rb - Ruby/GTK sample script.
 
-  Copyright (c) 2002,2003 Ruby-GNOME2 Project Team
+  Copyright (c) 2002-2006 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: fileselection.rb,v 1.8 2005/03/22 17:41:28 silicio Exp $
+  $Id: fileselection.rb,v 1.9 2006/05/04 04:05:00 mutoh Exp $
 =end
 
 require 'gtk2'
 
 Gtk.init
+
+puts "Deprecated. Use Gtk::FileChooserDialog instead."
 
 window = Gtk::FileSelection.new("file selection dialog")
 window.window_position = Gtk::Window::POS_MOUSE
