@@ -2,17 +2,19 @@
 =begin
   itemfactory.rb - Ruby/GTK sample script.
 
-  Copyright (c) 2002-2005 Ruby-GNOME2 Project Team
+  Copyright (c) 2002-2006 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
   *NOTE* Gtk::ItemFactory has been deprecated. Use Gtk::UIManager instead.
 
-  $Id: itemfactory.rb,v 1.5 2005/07/14 17:01:49 mutoh Exp $
+  $Id: itemfactory.rb,v 1.6 2006/05/04 04:05:00 mutoh Exp $
 =end
 
 require 'gtk2'
 
 Gtk.init
+
+puts "Deprecated. Use Gtk::UIManager instead."
 
 window = Gtk::Window.new("Gtk::ItemFactory")
 window.signal_connect("destroy") do
